some jvm tuning and compiler tuning